# sat-scheduler

./: .gitignore  README.md  app.js  package-lock.json  package.json
command_structure/: README.md  command_t.json
conf/: nginx.conf
json_parser_source/: command_parser.cpp  command_parser.h  vcpkg.json
json_parser_source/exampleCommand/: example.py
json_parser_source/rapidjson/: document.h
json_parser_source/src/: CMakeLists.txt  command_parser.cpp  command_parser.h
src/json_parser_source/src/: CMakeLists.txt  command_parser.h
src/node_server/: app.js
